feat(ui/agah-pwa): base app

--- a/ui/agah-pwa/index.html
+++ b/ui/agah-pwa/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
   </head>
   <body>
-    <spy-app></spy-app>
+    <app-root></app-root>
 
     <script type="module" src="src/components/app-root.ts"></script>
 
