feat(ui|agah-pwa|index): i18n

--- a/uniquely/ui/agah-pwa/index.html
+++ b/uniquely/ui/agah-pwa/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr" unresolved>
+<html lang="fa-IR" dir="rtl" unresolved>
   <head>
     <meta charset="utf-8" />
     <meta
