--- a/uniquely/ui/agah-pwa/index.html
+++ b/uniquely/ui/agah-pwa/index.html
@@ -7,11 +7,11 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=no, viewport-fit=cover"
     />
 
-    <title>Agah PWA</title>
+    <title>آگاه</title>
 
     <base href="/" />
 
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="light" />
 
     <meta name="theme-color" content="#ffe9d9" />
     <meta name="msapplication-TileColor" content="#ffe9d9" />
